変更した内容をメモ

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
   <section class="Portfolio" id="Portfolio">
     <div class="pt">
       <h2 class="title-2">Portfolio</h2>
+      <div class="video">
       <video src="mov/12401760249736%202.MP4" loop autoplay muted></video>
+    </div>
     </div>
   </section>
 
@@ -78,20 +80,21 @@
     <div class="member-1">
       <h2 class="title-3">Member</h2>
       <div class="m-img">
-        <img src="img/7.png" alt="">
-        <img src="img/8.png" alt="">
-        <img src="img/6.png" alt="">
+        <img src="img/7.png" alt="" class="member-img">
+        <img src="img/8.png" alt=""
+        class="member-img">
+        <img src="img/6.png" alt="" class="member-img">
       </div>
     </div>
   </section>
 
   <!-- contact　-->
-  <section class="Contact" id="Conntact">
+  <section class="Contact" id="Contact">
     <div class="contect-1">
-      <h2 class="title-4">Contect Us</h2>
+      <h2 class="title-4">Contact Us</h2>
       <p>依頼のお問い合わせは<br>
         こちら</p>
-      <a href="contect" class="conect-bo">CONTECT FORM
+      <a href="contect" class="conect-bo">CONTACT FORM
       </a>
     </div>
   </section>
