変更した内容をメモ

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>KARAKU</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="favicon.ico">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
   <!--　viewport規定　-->
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
@@ -36,7 +36,7 @@
 
       <div class="bg-img">
 
-        <img src="img/3.png" alt="">
+
       </div>
 
     </div>
@@ -50,7 +50,9 @@
   <!-- About　-->
   <section class="About" id="About">
     <div class="info">
-      <img src="img/a.png" alt="">
+
+      <div class="image-slider"></div>
+
       <div class="box">
         <h2 class="title-1">About</h2>
         <div class="info-1">
@@ -96,7 +98,6 @@
       </div>
     </div>
   </section>
-
   <!-- contact　-->
   <section class="Contact" id="Contact">
     <div class="contect-1">
@@ -106,13 +107,31 @@
       <a href="https://forms.gle/7pjoRVLKBvoRFZ6t8" class="conect-bo">CONTACT FORM
       </a>
 
-      <a href="https://twitter.com/home" class="twit-bo"></a>
+
+      <div class="sns">
+
+
+
+        <a href="https://www.instagram.com/xxkaraku/" class="insta-bo link">
+          <img src="./img/1.png" alt="" width="70px">
+        </a>
+        <a href="https://twitter.com/toshi_karaku" class="insta-bo link">
+          <img src="./img/2.png" alt="" width="70px">
+        </a>
+      </div>
+
 
 
     </div>
   </section>
 
-
+ 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   
-
+   <script src="./js/jquery.bgswitcher.js"></script>
+   
+  <script src="js/main.js"><!-- korehasaigonikitei　-->
+    
+    
+  </script>
 </body>
