変更した内容をメモ

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section class="About" id="About">
     <div class="info">
 
-      <div class="image-slider"></div>
+      <div class="bg-slider"></div>
 
       <div class="box">
         <h2 class="title-1">About</h2>
