変更した内容をメモ

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           <h4>　芸術大学内で結成された、クリエイティブグループ。</h4>
         </div>
         <div class="p">
-          <p>映像・アニメーション・デザイン・写真などのジャンルを<br>
-            主に制作。<br>
-            所属するメンバーが得意なスキルを、グループ内の他のメ<br>
+          <p>映像・アニメーション・デザイン・写真などのジャンルを<br class="br-1">
+            主に制作。<br class="br-2">
+            所属するメンバーが得意なスキルを、グループ内の他のメ<br class="br-3">
             ンバーが持つスキルと組み合わせ作品を制作している。
           </p>
         </div>
