--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
 
- 
+  <footer>&copy; KARAKU Inc.</footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   
    <script src="./js/jquery.bgswitcher.js"></script>
@@ -135,3 +135,4 @@
     
   </script>
 </body>
+</html>
